--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "~40.0.0",
     "expo-app-loading": "^1.0.1",
     "expo-status-bar": "~1.0.3",
+    "moment": "^2.29.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
@@ -21,6 +22,7 @@
     "react-native-screens": "~2.15.0",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
+    "react-navigation-drawer": "^2.6.0",
     "react-navigation-header-buttons": "^6.0.2",
     "react-navigation-stack": "^2.10.2",
     "react-redux": "^7.2.2",
